--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
       "scripts": {
             "dev": "vite",
             "build": "vite build",
-            "preview": "vite preview",
-            "deploy": "npx vercel --prod"
+            "preview": "vite preview"
       },
       "dependencies": {
             "@emotion/react": "^11.11.1",
@@ -21,7 +20,6 @@
             "@types/react": "^18.2.45",
             "@types/react-dom": "^18.2.18",
             "@vitejs/plugin-react": "^4.0.4",
-            "vercel": "^32.3.0",
-            "vite": "^4.5.5"
+            "vite": "^4.4.9"
       }
 }
